EEVEE Animation crashes with Motion Blur and Displacement modifier #87464

Closed
opened 2021-04-13 17:09:59 +02:00 by Michał · 12 comments

System Information
Operating system: Windows-10-10.0.19041-SP0 64 Bits
Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-11 20:10, hash: 09d7d88cc4
Worked: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-23 18:34, hash: 3ea1779365

Caused by 50782df425

Short description of error
I have some files (which I cannot share) authored with Blender 2.93 from March 23. Everything renders well in that version. When I open the files in the newest Blender alpha, EEVEE animation rendering crashes both in the GUI and CLI.
I managed to replicate the error in a simple example. It seems to always happen given these conditions:

  1. Motion blur enabled
  2. Objects have some modifiers like displacement.

Exact steps for others to reproduce the error

  1. Open file crashtest.blend
  2. Render Animation
  3. Blender crashes.

Alternatively, to reproduce the error from scratch:

  1. In a default file with only a cube and camera, add a Displacement Modifier to the cube.
  2. Change the render engine to EEVEE and enable Motion Blur.
  3. Render animation.
  4. Blender crashes.

It also crashes for me on some EEVEE demo files, like Ian Hubert's Blender 2.83 Splashscreen (https://cloud.blender.org/p/gallery/5eff317d7920214fcfa0770e)

2.93_crash_eevee_anim.zip

**System Information** Operating system: Windows-10-10.0.19041-SP0 64 Bits Graphics card: GeForce RTX 2070/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 461.92 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-04-11 20:10, hash: `09d7d88cc4` Worked: version: 2.93.0 Alpha, branch: master, commit date: 2021-03-23 18:34, hash: `3ea1779365` Caused by 50782df425 **Short description of error** I have some files (which I cannot share) authored with Blender 2.93 from March 23. Everything renders well in that version. When I open the files in the newest Blender alpha, EEVEE animation rendering crashes both in the GUI and CLI. I managed to replicate the error in a simple example. It seems to always happen given these conditions: 1) Motion blur enabled 2) Objects have some modifiers like displacement. **Exact steps for others to reproduce the error** 1) Open file crashtest.blend 2) Render Animation 3) Blender crashes. Alternatively, to reproduce the error from scratch: 1) In a default file with only a cube and camera, add a Displacement Modifier to the cube. 2) Change the render engine to EEVEE and enable Motion Blur. 3) Render animation. 4) Blender crashes. It also crashes for me on some EEVEE demo files, like Ian Hubert's Blender 2.83 Splashscreen (https://cloud.blender.org/p/gallery/5eff317d7920214fcfa0770e) [2.93_crash_eevee_anim.zip](https://archive.blender.org/developer/F9931940/2.93_crash_eevee_anim.zip)
Author

Added subscriber: @MichalDresner

Added subscriber: @MichalDresner
Michał changed title from EEVEE Animation crashes under certain conditions to EEVEE Animation crashes with Motion Blur and Displacement modifier 2021-04-14 10:32:35 +02:00
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm.
Also crashes in DrvPresentBuffers (same as #85977 (NVidia: Random crashes in 'DrvPresentBuffers'))

BLI_assert(0 && "Not enough VBO slot in batch");

1  raise                                                   0x7ffff77c39d5 
2  abort                                                   0x7ffff77ac8a4 
3  _BLI_assert_abort              BLI_assert.c        56   0xfd042f5      
4  GPU_batch_vertbuf_add_ex       gpu_batch.cc        210  0xdd31f6e      
5  EEVEE_motion_blur_cache_finish eevee_motion_blur.c 470  0x3e67d96      
6  eevee_render_to_image          eevee_engine.c      547  0x3e567c1      
7  DRW_render_to_image            draw_manager.c      1915 0x3e3d470      
8  engine_render_view_layer       engine.c            871  0xd69ffb2      
9  RE_engine_render               engine.c            998  0xd6a0501      
10 do_render_engine               pipeline.c          1081 0xd6a7c6f      
11 do_render_compositor           pipeline.c          1210 0xd6a815e      
12 do_render_full_pipeline        pipeline.c          1477 0xd6a8d80      
13 RE_RenderAnim                  pipeline.c          2495 0xd6abc8a      
14 render_startjob                render_internal.c   638  0x5d75c48      
15 do_job_thread                  wm_jobs.c           389  0x3b7e0fb      
16 tslot_thread_start             threads.cc          231  0xfe26195      
17 start_thread                                            0x7ffff7f693f9 
18 clone                                                   0x7ffff7887b53 
Can confirm. Also crashes in `DrvPresentBuffers` (same as #85977 (NVidia: Random crashes in 'DrvPresentBuffers')) `BLI_assert(0 && "Not enough VBO slot in batch");` ``` 1 raise 0x7ffff77c39d5 2 abort 0x7ffff77ac8a4 3 _BLI_assert_abort BLI_assert.c 56 0xfd042f5 4 GPU_batch_vertbuf_add_ex gpu_batch.cc 210 0xdd31f6e 5 EEVEE_motion_blur_cache_finish eevee_motion_blur.c 470 0x3e67d96 6 eevee_render_to_image eevee_engine.c 547 0x3e567c1 7 DRW_render_to_image draw_manager.c 1915 0x3e3d470 8 engine_render_view_layer engine.c 871 0xd69ffb2 9 RE_engine_render engine.c 998 0xd6a0501 10 do_render_engine pipeline.c 1081 0xd6a7c6f 11 do_render_compositor pipeline.c 1210 0xd6a815e 12 do_render_full_pipeline pipeline.c 1477 0xd6a8d80 13 RE_RenderAnim pipeline.c 2495 0xd6abc8a 14 render_startjob render_internal.c 638 0x5d75c48 15 do_job_thread wm_jobs.c 389 0x3b7e0fb 16 tslot_thread_start threads.cc 231 0xfe26195 17 start_thread 0x7ffff7f693f9 18 clone 0x7ffff7887b53 ```
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

Caused by 50782df425

CC @brecht

Caused by 50782df425 CC @brecht

Added subscriber: @fclem

Added subscriber: @fclem

@fclem with the new code it will keep the depsgraph from frame to frame for Eevee, but this seems to be failing with motion blur.

This is the error:
P2079: (An Untitled Masterwork)

=================================================================
==130031==ERROR: AddressSanitizer: heap-use-after-free on address 0x615000161508 at pc 0x00001545a825 bp 0x7fff85b9ba10 sp 0x7fff85b9ba00
READ of size 8 at 0x615000161508 thread #131
    #0 0x1545a824 in blender::gpu::GLBatch::verts_(int) const /home/brecht/dev/worktree/source/blender/gpu/opengl/gl_batch.hh:109
    #1 0x154a645b in blender::gpu::GLVertArray::update_bindings(unsigned int, GPUBatch const*, blender::gpu::ShaderInterface const*, int) /home/brecht/dev/worktree/source/blender/gpu/opengl/gl_vertex_array.cc:124
    #2 0x1543bd5b in blender::gpu::GLVaoCache::vao_get(GPUBatch*) /home/brecht/dev/worktree/source/blender/gpu/opengl/gl_batch.cc:273
    #3 0x1543c6ad in blender::gpu::GLBatch::bind(int) /home/brecht/dev/worktree/source/blender/gpu/opengl/gl_batch.cc:306
    #4 0x1543c7d3 in blender::gpu::GLBatch::draw(int, int, int, int) /home/brecht/dev/worktree/source/blender/gpu/opengl/gl_batch.cc:314
    #5 0x15459388 in blender::gpu::GLDrawList::submit() /home/brecht/dev/worktree/source/blender/gpu/opengl/gl_drawlist.cc:219
    #6 0x1538d3a4 in GPU_draw_list_submit /home/brecht/dev/worktree/source/blender/gpu/intern/gpu_drawlist.cc:58
    #7 0x43e4079 in draw_call_batching_flush /home/brecht/dev/worktree/source/blender/draw/intern/draw_manager_exec.c:796
    #8 0x43e7607 in draw_call_batching_finish /home/brecht/dev/worktree/source/blender/draw/intern/draw_manager_exec.c:891
    #9 0x43e9afe in draw_shgroup /home/brecht/dev/worktree/source/blender/draw/intern/draw_manager_exec.c:1056
    #10 0x43ea8b6 in drw_draw_pass_ex /home/brecht/dev/worktree/source/blender/draw/intern/draw_manager_exec.c:1113
    #11 0x43eae67 in DRW_draw_pass /home/brecht/dev/worktree/source/blender/draw/intern/draw_manager_exec.c:1153
    #12 0x46d489a in EEVEE_velocity_resolve /home/brecht/dev/worktree/source/blender/draw/engines/eevee/eevee_effects.c:450
    #13 0x46d4d05 in EEVEE_draw_effects /home/brecht/dev/worktree/source/blender/draw/engines/eevee/eevee_effects.c:470
    #14 0x448d0ad in EEVEE_render_draw /home/brecht/dev/worktree/source/blender/draw/engines/eevee/eevee_render.c:662
    #15 0x441cbb1 in eevee_render_to_image /home/brecht/dev/worktree/source/blender/draw/engines/eevee/eevee_engine.c:565
    #16 0x43b38a1 in DRW_render_to_image /home/brecht/dev/worktree/source/blender/draw/intern/draw_manager.c:1915
    #17 0x134156c2 in engine_render_view_layer /home/brecht/dev/worktree/source/blender/render/intern/engine.c:871
    #18 0x134178ad in RE_engine_render /home/brecht/dev/worktree/source/blender/render/intern/engine.c:998
    #19 0x1343daae in do_render_engine /home/brecht/dev/worktree/source/blender/render/intern/pipeline.c:1081
    #20 0x1343f7a0 in do_render_compositor /home/brecht/dev/worktree/source/blender/render/intern/pipeline.c:1210
    #21 0x13443ee5 in do_render_full_pipeline /home/brecht/dev/worktree/source/blender/render/intern/pipeline.c:1477
    #22 0x13450f71 in RE_RenderAnim /home/brecht/dev/worktree/source/blender/render/intern/pipeline.c:2495
    #23 0xa68b248 in render_startjob /home/brecht/dev/worktree/source/blender/editors/render/render_internal.c:638
    #24 0x3a570e2 in do_job_thread /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_jobs.c:389
    #25 0x1719287a in tslot_thread_start /home/brecht/dev/worktree/source/blender/blenlib/intern/threads.cc:231
    #26 0x7ffff754d608 in start_thread /build/glibc-eX1tMB/glibc-2.31/nptl/pthread_create.c:477
    #27 0x7ffff6ed6292 in __clone (/lib/x86_64-linux-gnu/libc.so.6+0x122292)

0x615000161508 is located 8 bytes inside of 472-byte region [0x615000161500,0x6150001616d8)
freed by thread #131 here:
    #0 0x7ffff76797cf in __interceptor_free (/usr/lib/x86_64-linux-gnu/libasan.so.5+0x10d7cf)
    #1 0x7ffff6e39042 in _IO_fclose (/lib/x86_64-linux-gnu/libc.so.6+0x85042)

previously allocated by thread #131 here:
    #0 0x7ffff7679bc8 in malloc (/usr/lib/x86_64-linux-gnu/libasan.so.5+0x10dbc8)
    #1 0x7ffff6e39aad in _IO_fopen (/lib/x86_64-linux-gnu/libc.so.6+0x85aad)

Thread #131 created by T0 here:
    #0 0x7ffff75a6805 in pthread_create (/usr/lib/x86_64-linux-gnu/libasan.so.5+0x3a805)
    #1 0x17192aa6 in BLI_threadpool_insert /home/brecht/dev/worktree/source/blender/blenlib/intern/threads.cc:245
    #2 0x3a58107 in WM_jobs_start /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_jobs.c:484
    #3 0xa68fb66 in screen_render_invoke /home/brecht/dev/worktree/source/blender/editors/render/render_internal.c:1061
    #4 0x39ed5c3 in wm_operator_invoke /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_event_system.c:1350
    #5 0x39ef4fb in wm_operator_call_internal /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_event_system.c:1557
    #6 0x39ef75a in WM_operator_name_call_ptr /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_event_system.c:1605
    #7 0x79f8753 in ui_apply_but_funcs_after /home/brecht/dev/worktree/source/blender/editors/interface/interface_handlers.c:937
    #8 0x7a82b07 in ui_handler_region_menu /home/brecht/dev/worktree/source/blender/editors/interface/interface_handlers.c:10869
    #9 0x39e6d48 in wm_handler_ui_call /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_event_system.c:693
    #10 0x39fd33f in wm_handlers_do_intern /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_event_system.c:2842
    #11 0x39fe628 in wm_handlers_do /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_event_system.c:2958
    #12 0x3a036cc in wm_event_do_handlers /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_event_system.c:3378
    #13 0x39cf1bf in WM_main /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm.c:647
    #14 0x1d84d4f in main /home/brecht/dev/worktree/source/creator/creator.c:520
    #15 0x7ffff6ddb0b2 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x270b2)

SUMMARY: AddressSanitizer: heap-use-after-free /home/brecht/dev/worktree/source/blender/gpu/opengl/gl_batch.hh:109 in blender::gpu::GLBatch::verts_(int) const

It may be doing some operations the wrong OpenGL context or no context, but to me it looks like it's doing things in the proper contexts.

Or there may be some motion blur data that hangs around from frame to frame, causing issues. I don't know this part of the code well, could you take a look?

@fclem with the new code it will keep the depsgraph from frame to frame for Eevee, but this seems to be failing with motion blur. This is the error: [P2079: (An Untitled Masterwork)](https://archive.blender.org/developer/P2079.txt) ``` ================================================================= ==130031==ERROR: AddressSanitizer: heap-use-after-free on address 0x615000161508 at pc 0x00001545a825 bp 0x7fff85b9ba10 sp 0x7fff85b9ba00 READ of size 8 at 0x615000161508 thread #131 #0 0x1545a824 in blender::gpu::GLBatch::verts_(int) const /home/brecht/dev/worktree/source/blender/gpu/opengl/gl_batch.hh:109 #1 0x154a645b in blender::gpu::GLVertArray::update_bindings(unsigned int, GPUBatch const*, blender::gpu::ShaderInterface const*, int) /home/brecht/dev/worktree/source/blender/gpu/opengl/gl_vertex_array.cc:124 #2 0x1543bd5b in blender::gpu::GLVaoCache::vao_get(GPUBatch*) /home/brecht/dev/worktree/source/blender/gpu/opengl/gl_batch.cc:273 #3 0x1543c6ad in blender::gpu::GLBatch::bind(int) /home/brecht/dev/worktree/source/blender/gpu/opengl/gl_batch.cc:306 #4 0x1543c7d3 in blender::gpu::GLBatch::draw(int, int, int, int) /home/brecht/dev/worktree/source/blender/gpu/opengl/gl_batch.cc:314 #5 0x15459388 in blender::gpu::GLDrawList::submit() /home/brecht/dev/worktree/source/blender/gpu/opengl/gl_drawlist.cc:219 #6 0x1538d3a4 in GPU_draw_list_submit /home/brecht/dev/worktree/source/blender/gpu/intern/gpu_drawlist.cc:58 #7 0x43e4079 in draw_call_batching_flush /home/brecht/dev/worktree/source/blender/draw/intern/draw_manager_exec.c:796 #8 0x43e7607 in draw_call_batching_finish /home/brecht/dev/worktree/source/blender/draw/intern/draw_manager_exec.c:891 #9 0x43e9afe in draw_shgroup /home/brecht/dev/worktree/source/blender/draw/intern/draw_manager_exec.c:1056 #10 0x43ea8b6 in drw_draw_pass_ex /home/brecht/dev/worktree/source/blender/draw/intern/draw_manager_exec.c:1113 #11 0x43eae67 in DRW_draw_pass /home/brecht/dev/worktree/source/blender/draw/intern/draw_manager_exec.c:1153 #12 0x46d489a in EEVEE_velocity_resolve /home/brecht/dev/worktree/source/blender/draw/engines/eevee/eevee_effects.c:450 #13 0x46d4d05 in EEVEE_draw_effects /home/brecht/dev/worktree/source/blender/draw/engines/eevee/eevee_effects.c:470 #14 0x448d0ad in EEVEE_render_draw /home/brecht/dev/worktree/source/blender/draw/engines/eevee/eevee_render.c:662 #15 0x441cbb1 in eevee_render_to_image /home/brecht/dev/worktree/source/blender/draw/engines/eevee/eevee_engine.c:565 #16 0x43b38a1 in DRW_render_to_image /home/brecht/dev/worktree/source/blender/draw/intern/draw_manager.c:1915 #17 0x134156c2 in engine_render_view_layer /home/brecht/dev/worktree/source/blender/render/intern/engine.c:871 #18 0x134178ad in RE_engine_render /home/brecht/dev/worktree/source/blender/render/intern/engine.c:998 #19 0x1343daae in do_render_engine /home/brecht/dev/worktree/source/blender/render/intern/pipeline.c:1081 #20 0x1343f7a0 in do_render_compositor /home/brecht/dev/worktree/source/blender/render/intern/pipeline.c:1210 #21 0x13443ee5 in do_render_full_pipeline /home/brecht/dev/worktree/source/blender/render/intern/pipeline.c:1477 #22 0x13450f71 in RE_RenderAnim /home/brecht/dev/worktree/source/blender/render/intern/pipeline.c:2495 #23 0xa68b248 in render_startjob /home/brecht/dev/worktree/source/blender/editors/render/render_internal.c:638 #24 0x3a570e2 in do_job_thread /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_jobs.c:389 #25 0x1719287a in tslot_thread_start /home/brecht/dev/worktree/source/blender/blenlib/intern/threads.cc:231 #26 0x7ffff754d608 in start_thread /build/glibc-eX1tMB/glibc-2.31/nptl/pthread_create.c:477 #27 0x7ffff6ed6292 in __clone (/lib/x86_64-linux-gnu/libc.so.6+0x122292) 0x615000161508 is located 8 bytes inside of 472-byte region [0x615000161500,0x6150001616d8) freed by thread #131 here: #0 0x7ffff76797cf in __interceptor_free (/usr/lib/x86_64-linux-gnu/libasan.so.5+0x10d7cf) #1 0x7ffff6e39042 in _IO_fclose (/lib/x86_64-linux-gnu/libc.so.6+0x85042) previously allocated by thread #131 here: #0 0x7ffff7679bc8 in malloc (/usr/lib/x86_64-linux-gnu/libasan.so.5+0x10dbc8) #1 0x7ffff6e39aad in _IO_fopen (/lib/x86_64-linux-gnu/libc.so.6+0x85aad) Thread #131 created by T0 here: #0 0x7ffff75a6805 in pthread_create (/usr/lib/x86_64-linux-gnu/libasan.so.5+0x3a805) #1 0x17192aa6 in BLI_threadpool_insert /home/brecht/dev/worktree/source/blender/blenlib/intern/threads.cc:245 #2 0x3a58107 in WM_jobs_start /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_jobs.c:484 #3 0xa68fb66 in screen_render_invoke /home/brecht/dev/worktree/source/blender/editors/render/render_internal.c:1061 #4 0x39ed5c3 in wm_operator_invoke /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_event_system.c:1350 #5 0x39ef4fb in wm_operator_call_internal /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_event_system.c:1557 #6 0x39ef75a in WM_operator_name_call_ptr /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_event_system.c:1605 #7 0x79f8753 in ui_apply_but_funcs_after /home/brecht/dev/worktree/source/blender/editors/interface/interface_handlers.c:937 #8 0x7a82b07 in ui_handler_region_menu /home/brecht/dev/worktree/source/blender/editors/interface/interface_handlers.c:10869 #9 0x39e6d48 in wm_handler_ui_call /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_event_system.c:693 #10 0x39fd33f in wm_handlers_do_intern /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_event_system.c:2842 #11 0x39fe628 in wm_handlers_do /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_event_system.c:2958 #12 0x3a036cc in wm_event_do_handlers /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm_event_system.c:3378 #13 0x39cf1bf in WM_main /home/brecht/dev/worktree/source/blender/windowmanager/intern/wm.c:647 #14 0x1d84d4f in main /home/brecht/dev/worktree/source/creator/creator.c:520 #15 0x7ffff6ddb0b2 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x270b2) SUMMARY: AddressSanitizer: heap-use-after-free /home/brecht/dev/worktree/source/blender/gpu/opengl/gl_batch.hh:109 in blender::gpu::GLBatch::verts_(int) const ``` It may be doing some operations the wrong OpenGL context or no context, but to me it looks like it's doing things in the proper contexts. Or there may be some motion blur data that hangs around from frame to frame, causing issues. I don't know this part of the code well, could you take a look?
Clément Foucault self-assigned this 2021-04-20 19:51:45 +02:00

Added subscriber: @Robert_B

Added subscriber: @Robert_B

Added subscriber: @HaigPetrus

Added subscriber: @HaigPetrus

This issue was referenced by c4bebc03e0

This issue was referenced by c4bebc03e0e7af0b6fe31c9751b81635645bd547

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
7 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#87464
No description provided.